Testrunner returns results file